--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@500&family=Bree+Serif&family=Nunito:wght@300&family=Open+Sans+Condensed:wght@300&display=swap');
+
 *{
   padding: 0px;
   margin: 0px;
@@ -9,49 +11,8 @@
 
 #navbar{
   display:flex;
-  
   justify-content: space-between;
   align-items: center;
-}
-
-.logo{
-  margin: 8px 22px;
-}
-
-.logo img{
-  border: 80px;
-  border-radius: 50px;
-  background-color: white;
-  padding: 8px;
-  height: 60px;
-}
-.logo img:hover{
-  height: 4.0rem;
-}
-
-#navbar ul{
-  display: flex;
-  list-style: none;
-  margin: 8px 22px;
-  
-}
-#navbar{
-  position: relative;
-}
-
-#navbar ul li a{
-  font-size: 1.5rem;
-  color: #fff;
-  text-decoration: none;
-  padding: 4px;
-  margin: 6px;
-  font-size: 1.3rem;
-}
-
-#navbar ul li a:hover{
-  background: grey;
-  border-radius: 33px;
-  color: white;
 }
 
 #navbar::before{
@@ -63,6 +24,45 @@
   z-index: -1;
   opacity: 0.4;
 }
+.logo{
+  margin: 10px 36px;
+}
+
+.logo img{
+  border: 70px;
+  border-radius: 50px;
+  background-color: white;
+  padding: 8px;
+  height: 60px;
+}
+
+#navbar ul{
+  display: flex;
+  list-style: none;
+  margin: 8px 22px;
+  
+}
+
+#navbar ul li a{
+  font-family: 'Baloo Bhai 2', cursive;
+  font-weight: 800;
+  font-size: 1.5rem;
+  color: #fff;
+  text-decoration: none;
+  padding: 4px;
+  margin: 19px;
+  font-size: 1.6rem;
+}
+
+#navbar ul li a:hover{
+  background: white;
+  border-radius: 33px;
+  color: black;
+  top: 0;
+  left: 0;
+  padding: 10px;
+}
+
 
 
 /* Home Section */
@@ -70,24 +70,140 @@
   display:flex;
   flex-direction: column;
   padding: 3px 200px;
+  height: 633px;
   justify-content: center;
   align-items: center;
-  height: 400px;
-  color: white;
+  color: #fff;
 }
 #home::before{
   content: "";
-  background: url(../Img/bg1.jpg) no-repeat center center/cover;
   position: absolute;
-  height:100%;
-  width:100%;
+  background: url(../Img/bg1.jpg) no-repeat center center/cover;
+  width: 100%;
+  height: 642px;
   z-index: -1;
   opacity: 0.89;
+  top: 0px;
+  left: 0px;
 }
+
+.empty{
+  height: 200px;
+}
+/* Service sction */
+
+#services{
+  margin: 40px;
+  display: flex;
+}
+#services .box{
+  border: 2px solid brown;
+  margin: 4px;
+  border-radius: 12px;
+  background-color: rgb(214, 212, 212);
+  text-align: center;
+  padding: 12px;
+}
+#services .box img{
+  height: 160px;
+  margin: auto;
+  display: block;
+}
+
+/* Client section */
+#clients-section{
+  height: 344px;
+}
+#clients{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#clients img{
+  height: 124px;
+}
+.client-items{
+  padding: 34px;
+}
+
+/* Contact */
+#contact{
+  position: relative;
+}
+#contact::before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0.7;
+  background: url('../Img/contact.jpg') no-repeat center center/cover;
+
+}
+#contact-box{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 34px;
+}
+#contact-box input, 
+#contact-box textarea{
+  width: 100%;
+  padding: 0.5rem;
+  border-radius: 9px;
+  font-size: 1.1rem;
+} 
+
+#contact-box form{
+  width: 40%;
+}
+
+#contact-box label{
+ font-size: 1.3rem;
+ font-family: 'Bree Serif', serif;
+}
+/* footer */
+
+footer{
+  color: white;
+  background: black;
+  padding: 9px 20px;
+}
+
 /* Utility Class */
 .h1-primary{
   font-size: 2.8rem;
   padding: 12px;  
+  font-family: 'Bree Serif', serif;
+}
+.h-primary{
+  font-family: 'Bree Serif', serif;
+  font-size: 3.8rem;
+  padding: 12px;
+}
+.h-secondary{
+  font-size: 2.8rem;
+  padding: 12px;
+}
+
+#home p{
+  margin: 8px;
+  font-size: 1.5rem;
+}
+#home button{
+  font-family: 'Bree Serif', serif;
+  color: white;
+  background-color: brown;
+  border-radius: 15px;
+  font-size: 1.5rem;
+  padding: 6px 20px;
+  margin: 20px;
+  border: 2px solid white;
+  cursor: pointer;
+}
+
+.center{
+  text-align: center;
 }
 
 
